modified req. file

--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,8 +1,8 @@
-Required Python Libraries:
-Pandas
-Matplotlib
-Seaborn
-Streamlit
-Sikit Learn
-
-API Key = Your registered API key is: d45a04206227ded2f814f8046869de4f 
+pandas
+matplotlib
+seaborn
+streamlit
+scikit-learn
+plotly
+statsmodels
+streamlit-lottie
